refactor:统一修正在请求?format=json时返回仅包含Cookie值的map结构。
